update page routing, add course data, add home page

--- a/src/lessons/intro-to-transactions/CourseContent.module.css
+++ b/src/lessons/intro-to-transactions/CourseContent.module.css
@@ -1,7 +1,7 @@
 /* CourseContent.module.css */
 
 .lessonTitle {
-    color: #f5a623;
+    color: #23a5f5;
     margin-bottom: 16px;
     font-size: 1.4rem;
     font-weight: bold;
@@ -21,7 +21,7 @@
     color: #f5a623;
     padding: 2px 4px;
     border-radius: 4px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family:  monospace;
     font-size: 1rem;
   }
   
@@ -59,7 +59,7 @@
   }
   
   .lessonHeader {
-    color: #f5a623;
+    color: #23a5f5;
     margin-bottom: 16px;
     font-size: 1.2rem;
     font-weight: bold;
