--- a/src/lessons/intro-to-transactions/CourseContent.module.css
+++ b/src/lessons/intro-to-transactions/CourseContent.module.css
@@ -3,7 +3,7 @@
 .lessonTitle {
     color: #23a5f5;
     margin-bottom: 16px;
-    font-size: 1.4rem;
+    font-size: 1rem;
     font-weight: bold;
     transition: color 0.3s ease;
   }
@@ -11,8 +11,8 @@
 .lessonText {
     color: #ffffff;
     margin-bottom: 16px;
-    line-height: 1.6;
-    font-size: 1rem;
+    line-height: 1.6rem;
+    font-size: 0.875rem;
     transition: color 0.3s ease;
   }
   
@@ -22,7 +22,8 @@
     padding: 2px 4px;
     border-radius: 4px;
     font-family:  monospace;
-    font-size: 1rem;
+    font-size: 0.875rem;
+    font-weight: 600;
   }
   
 .lessonPre {
@@ -32,7 +33,7 @@
     border-radius: 4px;
     overflow-x: auto;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 1rem;
+    font-size: 0.875rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     transition: background-color 0.3s ease;
   }
@@ -61,7 +62,7 @@
   .lessonHeader {
     color: #23a5f5;
     margin-bottom: 16px;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: bold;
     transition: color 0.3s ease;
   }
