--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,7 +8,7 @@
   --background-end-rgb: 255, 255, 255;
 }
 #__next {
-  background: rgb(21, 22, 30);
+  background: rgba(21, 22, 30);
 }
 
 /* globals.css */
@@ -16,7 +16,7 @@ html, body, #__next, main {
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  background: rgba(21, 22, 30);
 }
 
 main {
